FP-1083: Fix app sidebar link color contrast
- Update hover and active states to pass color contrast.

--- a/client/src/components/Applications/AppBrowser/AppBrowser.scss
+++ b/client/src/components/Applications/AppBrowser/AppBrowser.scss
@@ -48,7 +48,7 @@ ul#appBrowser-sidebar {
 #appBrowser-tray .nav-link {
   min-width: var(--min-width);
   padding-left: var(--horizontal-buffer);
-  color: #707070;
+  color: var(--global-color-primary--dark);
 
   white-space: nowrap;
 }
@@ -58,13 +58,10 @@ ul#appBrowser-sidebar {
 }
 
 #appBrowser-sidebar .nav-link.active,
-#appBrowser-tray .nav-link.active {
-  background: var(--global-color-accent--weak);
-  border: none;
-}
-
+#appBrowser-tray .nav-link.active,
 #appBrowser-sidebar .nav-link:hover,
 #appBrowser-tray .nav-link:hover {
+  color: var(--global-color-primary--x-dark);
   background: var(--global-color-accent--weak);
   border: none;
 }
